# aovivo-12

./: pyproject.toml
app/: app.py
app/etl/: extract.py  load.py  transformation.py
pasta_gdown/: arquivo_novo.csv
