[tool.poetry]
name = "aovivo-12"
version = "0.1.0"
description = ""
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
readme = "README.md"
packages = [{include = "aovivo_12"}]

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.121.0"
pandas = "^2.2.1"
gdown = "^5.1.0"
pyarrow = "^15.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
